--- a/chatrooms/views/rooms.ejs
+++ b/chatrooms/views/rooms.ejs
@@ -5,6 +5,13 @@
 	<title>ChatCat - Rooms</title>
 	<link rel="stylesheet" href="/css/roomsStyles.css">
 	<script src="/js/jquery-2.1.4.min.js"></script>
+	<script src="/socket.io/socket.io.js"></script>
+	<script>
+		'use strict';
+		$(()=>{
+			let socket = io('http://127.0.0.1:3000/roomslist');
+		});
+	</script>
 </head>
 <body>
 	<div class="container">
@@ -23,8 +30,8 @@
 		<div class="roomsListDiv">
 			<ul class="roomsList" id="roomsListUL">
 			<!-- Loop list items here -->
-				<a href="chatroom.htm"><li>World Cuisine</li></a>
-				<a href="chatroom.htm"><li>Coffee and Conversations</li></a>
+				<a href="/chat"><li>World Cuisine</li></a>
+				<a href="/chat"><li>Coffee and Conversations</li></a>
 			<!-- Loop ends -->
 			</ul>
 		</div>
